# openshield

./: .dockerignore  .env.example  .gitignore  ADOPTERS.md  CNAME  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTOR_LICENSE_AGREEMENT.md  Dockerfile  README.md  SECURITY.md  config_example.yaml  go.mod  go.sum  main.go  main_test.go  test.txt
.github/free-disk-space/: action.yaml
.github/workflows/: cache-preview.yaml  cache-pull.yaml  codeql.yml  core-preview.yaml  core-pull.yaml  discord-notifications.yaml  pull-request.yaml  release.yaml  rule-server-preview.yaml  rule-server-pull.yaml
cmd/: cli.go  cli_test.go  cli_test.go_disabled  config.go  database.go  mock_data.go
db/: customModels.json  models.json
demo/: .env.example  .env_example  demo_config.yaml  docker-compose.yml
docker/: docker-compose.yml  docker-entrypoint.sh
docs/: docs.go  swagger.json  swagger.yaml
filters/: input.go
integrations/huggingface/: index.js
integrations/openmeter/: package.json
integrations/openmeter/src/: index.ts
lib/: anthropicprovider.go  audit_logs.go  authentication.go  cache.go  config.go  db.go  error.go  handlers.go  openaiprovider.go  provider.go  settings.go  usage.go  utils.go  vm.go
lib/anthropic/: handlers.go  provider.go
lib/huggingface/: handlers.go  provider.go
lib/llamaguard/: handlers.go
lib/nvidia/: handlers.go
lib/openai/: handlers.go  provider.go
lib/promptguard/: handlers.go
lib/provider/: common.go
lib/providers/openai/: handlers.go
lib/rules/: input.go  input_test.go
lib/types/: message.go
models/: aimodels.go  api_keys.go  audit_logs.go  base.go  products.go  tags.go  usage.go  workspace.go
rag/: Dockerfile  main.py  pyproject.toml
rules/: input.go  input_test.go
rules/rule-service/: Dockerfile  pyproject.toml
rules/rule-service/rule_service/: docker-compose.yml  init.sql  main.py  piiService.yaml  vector.py
rules/rule-service/rule_service/plugins/: detect_english.py  invisible_chars.py  pii.py  prompt_injection_llm.py
rules/rule-service/rule_service/tests/: test_api.py
rules/rule-service/tests/: test_api.py
server/: server.go  server_test.go
services/cache/: .dockerignore  .gitignore  Dockerfile  config_example.yaml  main.py  pyproject.toml
services/llmguard/: main.py  pyproject.toml
services/promptguard/: main.py  pyproject.toml
services/rule/: Dockerfile  README.md  pyproject.toml
services/rule/src/: main.py
services/rule/src/plugins/: __init__.py  azure_ai_content_safety_prompt_injection.py  content_safety.py  detect_code.py  detect_english.py  invisible_chars.py  langkit.py  llama_guard.py  nvidia_nim_jailbreak.py  openai_moderation.py  pii.py  ppl_jailbreak.py  prompt_guard.py  prompt_injection_llm.py  relevance.py  vigilllm.py
services/rule/src/tests/: test_api.py
services/rule/src/utils/: logger_config.py
services/vigilllm/: Dockerfile  entrypoint.sh  generate_config.sh  packages.txt
swagger-html-docs/: index.html
test-client/: .gitignore  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
test-client-php/: composer.json  index.php
test-client/src/: index.ts
