[tool.poetry]
name = "rule-service"
version = "0.1.0"
description = ""
authors = ["David Papp <pigri@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
transformers = "4.45.1"
torch = "^2.3.1"
rule-engine = "^4.5.0"
presidio-analyzer = "^2.2.355"
presidio-anonymizer = "^2.2.355"
requests = "^2.32.3"
uvicorn = "^0.32.0"
python-dotenv = "^1.0.1"
numpy = "^1.21.0"
spacy = "^3.7.5"
thinc = "^8.0.10"
openai = "^1.51.2"
accelerate = ">=0.26.0"
spacy-huggingface-pipelines = "^0.0.4"
langkit = {version = "^0.0.35", extras = ["all"]}
whylogs = "^1.5.0"


[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
